<resources>
    <string name="app_name">Share Trip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_post">Add post</string>
    <string name="hint_title">Title</string>
    <string name="hint_body">Body</string>
    <string name="btn_post">POST</string>
    <string name="add_post_button">Add post button</string>
    <string name="login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="back_arrow">back arrow</string>
    <string name="profile">Profile</string>
    <string name="hint_name">Name</string>
    <string name="remove_button">Remove button</string>
    <string name="edit_button">Edit button</string>
    <string name="save_button">Save button</string>
    <string name="logout_button">Logout button</string>
    <string name="btn_signup">SIGNUP</string>
    <string name="poi_viewer">POI Viewer</string>
    <string name="clear_button">Clear button</string>
    <string name="send_button">Send button</string>
    <string name="your_prompt">Your prompt...</string>
    <string name="access_my_location">Access my location</string>
    <string name="post_image">Post Image</string>
    <string name="footer_effect">footer_effect</string>
    <string name="login_successful">Login successful</string>
    <string name="login_error">Error when trying to login</string>
    <string name="error">Error: </string>
    <string name="signup_fail">Signup failed or cancelled</string>
    <string name="login_fail">Login failed or cancelled</string>
    <string name="signup_success">Signup successful</string>
    <string name="warn_prompt_missing">Write a prompt before sending</string>
    <string name="username_notfound">Username not found</string>
    <string name="chatbot_name">Share Trip ChatBot</string>
    <string name="error_send_prompt">Error sending the prompt</string>
    <string name="perm_denied">Permission denied</string>
    <string name="approximate_location">Your location will be approximate. To enable precise location, go to app settings and grant Fine Location permission.</string>
    <string name="btn_ok">OK</string>
    <string name="btn_settings">Go to Settings</string>
    <string name="ask_perm">We need your location to center the map. Please grant location permission.</string>
    <string name="err_marks_proc">Error Processing markers</string>
    <string name="err_load_posts">Error loading posts</string>
    <string name="fill_all">Fill all the fields</string>
    <string name="post_sent">Post sent</string>
    <string name="update_success">Update successful</string>
    <string name="acc_eliminated">Account eliminated with success</string>
    <string name="err_acc_elimin">Error trying to delete the account</string>
    <string name="email_notfound">Email not found</string>
    <string name="posts">Posts</string>
    <string name="map">Map</string>
    <string name="chatbot">Chatbot</string>
</resources>