<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.fragments.ChatbotFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ChatFrg_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/ChatFrg_promptInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ChatFrg_CardClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:background="@android:color/transparent"
        android:padding="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/ChatFrg_CardSend"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/Profile_btnRemove"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"

            android:contentDescription="@string/clear_button"
            android:padding="12dp"
            android:src="@drawable/baseline_delete_24"
            app:tint="@android:color/holo_red_dark" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ChatFrg_CardSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:background="@android:color/transparent"
        android:padding="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageButton
            android:id="@+id/Profile_btnSave"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"

            android:contentDescription="@string/send_button"
            android:padding="12dp"
            android:src="@drawable/baseline_send_24"
            app:tint="@android:color/holo_blue_dark" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/ChatFrg_promptInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/your_prompt"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ChatFrg_CardSend"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/ChatFrg_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>